# Workflow-evaluation

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.Database.md  README.Docker.md  README.md  alembic.ini  compose.override.yaml  compose.yaml  development.md  draft_mads.txt  env.sample  main.py  newREADME.md  pyproject.toml
.github/workflows/: CI.yml
app/: db.py  exceptions.py  factory.py  main.py  model.py  models.py
app/alembic/: env.py
app/alembic/versions/: 3ed9c3418547_create_results_table.py  a5ce3b796933_initial_migration.py  ac9d16ec7ff5_db_time.py
app/api/: dependencies.py  evaluate.py  exception_handler.py  hello_world.py
app/config/: settings.py
app/core/engine/: orchestrator.py  rule_based.py
app/core/evaluators/: base.py  cosine_evaluator.py  length_evaluator.py  llm_judge.py  orchestrator.py  rouge_evaluator.py  rule_based_evaluator.py  substring_evaluator.py  validator.py
app/core/models/: aggregated_result_entity.py  base.py  embeddings.py  evaluationModel.py  evaluation_model.py  length_evaluator.py  llm_judge.py  orchestrator.py  registry.py  rouge_evaluator.py  rule_based_evaluator.py  substring_evaluator.py
app/core/providers/: azure.py  base.py  provider_registry.py
app/core/repositories/: i_result_repository.py  result_repository.py  sqlalchemy_result_repository.py
app/core/services/: evaluationService.py  evaluation_service.py
app/engine/strategies/: base.py
app/logging/: logging_config.py
app/utils/: math_utils.py  substring_matching_utils.py  time_utils.py
backend/: Dockerfile  README.Docker.md  README.md  backend_prestart.py  pyproject.toml
backend/app/: db.py  exceptions.py  factory.py  models.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 062dbd304333_add_score_to_result.py  32339e7d4b28_add_result_tags_and_model_metadata.py  3ab80448324a_remove_status_column_from_results.py  40ac16ac4764_change_type_of_execution_time.py  7b70cc1b2f82_add_table_evaluations.py  80fd4afd6633_initial_migration.py  a5ce3b796933_initial_migration.py  c844fd9b8bbc_update_to_celery.py  cfd2c8e4bf59_merge_heads.py  d3cbfee31357_added_created_by_column_to_result_table.py
backend/app/api/: auth.py  dependencies.py  evaluate.py  exception_handler.py  health.py
backend/app/config/: settings.py
backend/app/core/evaluators/: base.py  cosine_evaluator.py  llm_judge.py  orchestrator.py  rouge_evaluator.py  rule_based_evaluator.py
backend/app/core/models/: aggregated_result_entity.py  embeddings.py  evaluation_model.py  registry.py  result_query.py
backend/app/core/models/rules/: format_rules.py  keyword_rules.py  regex_rules.py
backend/app/core/providers/: azure.py  base.py  provider_registry.py
backend/app/core/repositories/: i_evaluation_repository.py  i_evalution_repository.py  i_result_repository.py  sqlalchemy_evaluation_repository.py  sqlalchemy_result_repository.py
backend/app/core/services/: evaluation_service.py  job_services.py  job_status_service.py  result_persistence_service.py  validator.py
backend/app/db/: job.py
backend/app/logging/: context.py  logging_config.py
backend/app/utils/: dynamic_register.py  evaluator_loader.py  time_utils.py
backend/app/workers/: celery_app.py  tasks.py
backend/scripts/: prestart.sh
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_auth.py  test_basic_integration.py  test_evaluate_happy_path.py  test_evaluate_integration.py  test_evaluate_multiple_strategies.py  test_evaluate_partial_failure.py  test_evaluation_endpoints.py  test_result_persistence_service.py  test_sqlalchemy_evaluation_repository.py  test_sqlalchemy_result_repository.py  test_status_lifecycle.py
backend/tests/unit/: test_conftest.py  test_cosine_evaluation.py  test_dynamic_register.py  test_evaluation_service.py  test_health.py  test_hello_world.py  test_llm_judge.py  test_orchestrator.py  test_provider.py  test_provider_registry.py  test_registry.py  test_rouge_evaluator.py  test_rule_based.py  test_run_evaluation_celery.py  test_substring_matching_utils.py
backend/tests/unit/register_test_directory/: test_evaluator1.py  test_evaluator2.py
docs/: add-new-evaluator.md  backend.md  development.md  evaluation-examples.md  frontend.md
docs/diagrams/: .$abstractComponent.drawio.bkp  DataFlow.drawio  abstractComponent.drawio  component.drawio
evaluation-frontend/: package-lock.json  package.json
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  index.html  nginx.conf  package.json  vite.config.ts
frontend/evaluation-frontend/: README.md  package-lock.json  package.json
frontend/evaluation-frontend/src/: App.tsx
frontend/src/: App.tsx  main.tsx
frontend/src/custom_components/: tabs.css  tabs.tsx
frontend/src/custom_hooks/: useInterval.tsx
frontend/src/dashboard/: dashboard.css  dashboard.tsx  data.tsx  utils.tsx
frontend/src/dto/: dto.tsx
frontend/src/evaluation-details/: evaluation-details.tsx
frontend/src/overview/: models.tsx  overview.tsx
tests/: conftest.py  test_evaluation_service.py  test_hello_world.py  test_length_evaluator.py  test_main.py  test_registry.py
tests/docker/: conftest.py  test_docker_run.py  test_docker_structure.py
tests/integration/: conftest.py  evaluate_integration.py  test_basic_integration.py  test_evaluate_happy_path.py  test_evaluate_integration.py  test_evaluate_multiple_strategies.py  test_evaluate_partial_failure.py  test_evaluation_endpoints.py  test_sqlalchemy_result_repository.py
tests/unit/: conftest.py  test_conftest.py  test_cosine_evaluation.py  test_evaluation_service.py  test_hello_world.py  test_length_evaluator.py  test_llm_judge.py  test_orchestrator.py  test_provider.py  test_provider_registry.py  test_registry.py  test_rouge_evaluator.py  test_rule_based.py  test_rule_based_evaluator.py  test_substring_evaluator.py  test_substring_matching_utils.py
(+13 files in other folders)
