[project]
name = "workflow-evaluation"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.131.0",
    "openai>=2.29.0",
    "scipy>=1.17.1",
]

[dependency-groups]
dev = [
    "docker>=7.1.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.2",
    "testcontainers>=4.14.1",
    "ty>=0.0.19",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = [
    "."
]

[tool.uv]
package = true

[tool.ruff]
preview = true
target-version = "py312"
line-length = 120


[tool.ruff.lint]
select = [
    "F", # pyflakes
    "W", # pycodestyle warnings
    "E", # pycodestyle errors
    "I", # isort
    "UP", # pyupgrade
    "C4", # flake8-comprehensions
    "B", # flake8-bugbear
    "ANN", # Mad if we forget type annotations, need this because ty is not very mature
    "SIM", # flake8-simplify
    "PIE", # flake8-PIE
    "PYI", # flake8-PYI
    "RET", # flake8-return
    "ISC", # flake8-string-concatenation
    "PGH", # pygrep-hooks
    "RUF", # ruff stuff
    "PTH", # pathlib stuff
    "N", # Enforces naming conventions
    "Q", # Enforces quote rules
]

ignore = [
    "E501", # We let the formatter handle long lines etc.
]

[tool.ruff.format]
docstring-code-format = true
